--- a/css/new_addressbook.css
+++ b/css/new_addressbook.css
@@ -1,46 +1,48 @@
-body{
+
+body {
     margin: 0;
     height: 100%;
 }
 
-.header{
+.header {
     padding: 15px 0;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
-.header-content{
+.header-content {
     display: flex;
     flex-direction: row;
-    align-content: center;
+    justify-content: center;
     align-items: center;
-    border: 0 solid skyblue;
+    border: 0px solid green;
+}
+
+.logo-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 0px solid green;
     width: 80%;
 }
 
-.logo-content{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border: 0 solid skyblue;
-    width: 80%;
-}
-
-.logo-content-img{
+.logo-content>img {
     border: solid 0px #42515f;
+    width: 50px;
+    height: 50px;
 }
 
-.emp-text{
+.book-text {
     font: normal normal bold 20px/25px Montserrat;
     font-family: "Montserrat", sans-serif;
     letter-spacing: 0px;
-    color: skyblue;
+    color: #008CFF;
     text-transform: capitalize;
+    font-size: 22px;
 }
-
-.emp-payroll{
+.add-book {
     color: #42515f;
 }
 
-*{box-sizing:
-     border-box;
+* {
+    box-sizing: border-box;
 }
