--- a/css/new_addressbook.css
+++ b/css/new_addressbook.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     height: 100%;
@@ -45,4 +44,39 @@ body {
 
 * {
     box-sizing: border-box;
+}
+.form-content {
+    min-height: calc(100% - 80px);
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0px solid #008CFF;
+    padding: 10px;
+    
+}
+.form {
+    width: 65%;
+    padding: 44px 60px;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #f5f5f5;
+    border-radius: 8px;
+    opacity: 1;
+    margin-top: 20px;
+}
+.form-head {
+    font: normal normal bold 24px/37px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    text-transform: capitalize;
+    opacity: 1;
+    padding: 10px;
+    background-color: #008CFF;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    justify-content: right;
+}
+.close{
+    float:right;
 }
